--- a/Appraisal.html
+++ b/Appraisal.html
@@ -6,14 +6,15 @@
 <body>
 <h1> Testing Appraisal</h1>
 
-<div style="color:blue;border:2px solid;">
+<div style="color:blue;width:200px;border:2px solid;">
 <p>Computer science is a discipline that spans theory and practice.</p>  
 
 </div>
 
 <br/>
 
-<form action='' method="POST">
+
+<form action='/target' method="POST">
 
 Select the type of appraisal:
 <select id="appraisalType" name="appraisal">
@@ -23,9 +24,7 @@ Select the type of appraisal:
 </select>
 
 
-<br/>
-
-<input name="SendMail" id="like" value="appraise" type="submit" onClick="sel();" />
+<input name="SendMail" id="like" value="appraise" type="submit" />
 
    </form>
 </body>
