More deletion notifications updates
The function now sends the mails

--- a/test.html
+++ b/test.html
@@ -41,6 +41,8 @@
 		<input type="radio" name="sendNotification" value="true" checked>Yes
 		<input type="radio" name="sendNotification" value="false">No
 		<br>
+		Enter the reason for deletion:<input type="text" name="message">
+		<br>
 		<br>
 		<input name="SendMail" id="like" value="Delete" type="submit" />
 	</form>
