Fixed spaces problem

--- a/test.html
+++ b/test.html
@@ -11,6 +11,12 @@
 	<br>
 	<hr>
 	<br>
+	<form action='DailyNotif' method="POST">
+		<input name="DailyNotif" id="like" value="Send Daily Notifications Now!" type="submit" />
+	</form>
+	<br>
+	<hr>
+	<br>
 	<h2>Appraisal Notification</h2>
 	<form action='/appraisal' method="POST">
 		Select the type of appraisal:
