--- a/test.html
+++ b/test.html
@@ -18,7 +18,20 @@
 	<hr>
 	<br>
 	<h2>Appraisal Notification</h2>
+	
+	
 	<form action='/appraisal' method="POST">
+	<br>
+        User_id:<input type="text" name="User_id">
+     <br>
+	 <br>
+        Post_User_id:<input type="text" name="Post_User_id">
+        <br>
+		<br>
+        Thread_id:<input type="text" name="Thread_id">
+      <br>
+	
+	
 		Select the type of appraisal:
 		<select id="appraisalType" name="appraisal">
 			<option value="Funny">Funny</option>
