--- a/test.html
+++ b/test.html
@@ -200,6 +200,13 @@
        <br>
         <input name="Register" value="Edit Settings" type="submit" />
     </form>
+	
+	<h2>Standard Notification</h2>
+	<form action='/standard' method="POST">
+		newThreadID:<input type="text" name="newThreadID" >
+		<br>
+		<input name="StandardNotif" id="newNotif" value="Add Thread" type="submit" />
+	</form>
 <hr>
 <br>
 <br>
